// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlled 1`] = `
.pf-c-check {
  display: block;
  cursor: pointer;
}

<input
  aria-invalid={false}
  checked={true}
  className="pf-c-check"
  disabled={false}
  onChange={[Function]}
  type="radio"
/>
`;

exports[`isDisabled 1`] = `
.pf-c-check {
  display: block;
  cursor: pointer;
}

<input
  aria-invalid={false}
  className="pf-c-check"
  disabled={true}
  onChange={[Function]}
  type="radio"
/>
`;

exports[`uncontrolled 1`] = `
.pf-c-check {
  display: block;
  cursor: pointer;
}

<input
  aria-invalid={false}
  className="pf-c-check"
  disabled={false}
  onChange={[Function]}
  type="radio"
/>
`;
